Fix overflow hidden issue.

--- a/src/pages/Checkout/Checkout.css
+++ b/src/pages/Checkout/Checkout.css
@@ -1,7 +1,3 @@
-body {
-    overflow-y: hidden;
-}
-
 .checkout-container {
   position: relative;
     margin: 150px auto;
